修改扩展包名称

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "test/package-for-test",
+    "name": "oyan/package-for-test",
     "authors": [
         {
             "name": "ouyanghai",
-            "email": "ouyanghai@wondershare.cn"
+            "email": "1114374850@qq.com"
         }
     ],
     "require": {},
